# manipulation_experiments

./: CMakeLists.txt  README.md  gen3.intr  gen3_real.intr  package.xml  requirements.txt
GPD_Files/: README.md  gen3.launch  gen3_robotiq_2f_85.srdf.xacro  ros_eigen_params.cfg
include/: gpd_class.hpp  manipulation_class.hpp  perception_class.hpp
launch/: arm.launch  basic_manipulation_and_3d_perception.launch  concatenate_cloud.launch  gpd_grasping_node.launch  gqcnn_grasping_node.launch  gqcnn_picK_and_place.launch  images.launch  launch_grasp_planner.launch  perception_test.launch  pick_and_place.launch  real_arm.launch  real_gen3_grasping.launch  real_gen3_pick_place.launch  sim.launch
src/: camera.py  concatenate_clouds.cpp  concatenate_clouds.hpp  gqcnn_pick_and_place.py  manipulation.py  pick_and_place.cpp  policy_ros.py
src/functions/: gpd.cpp  gpd_class.cpp  manipulation_class.cpp  perception_class.cpp
src/nodes/: basic_manipulation_and_3d_perception.cpp  gpd_grasping_node.cpp  gqcnn_ros.py  grasp_arm.py  perception_test.cpp
src/real_arm_functions/: camera.py  manipulation.py
src/sim_functions/: camera_sim.py  manipulation_sim.py
